# tsingroc-pymeteo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release-pypi.yml
tsingrocpymeteo/: __init__.py  auth.py  meteo.py
