[tool.poetry]
name = "tsingroc-pymeteo"
version = "0.1.5"
description = ""
authors = ["Jun Zhang <zhangjun@tsingroc.com>"]
readme = "README.md"
packages = [{include = "tsingrocpymeteo"}]

[tool.poetry.dependencies]
python = "^3.9"
shapely = "^2"
requests = "^2.32.3"
pandas = "^2.2.3"
numpy = "^1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
